--- a/LearnSphere-frontend/package.json
+++ b/LearnSphere-frontend/package.json
@@ -11,9 +11,13 @@
   },
   "dependencies": {
     "@react-oauth/google": "^0.13.4",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.5.0",
     "@reduxjs/toolkit": "^2.10.1",
     "@tailwindcss/vite": "^4.1.16",
     "axios": "^1.13.1",
+    "framer-motion": "^12.33.0",
+    "gsap": "^3.14.2",
     "jspdf": "^4.1.0",
     "jspdf-autotable": "^5.0.7",
     "jwt-decode": "^4.0.0",
@@ -22,10 +26,13 @@
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-player": "^3.4.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.5",
-    "recharts": "^3.3.0"
+    "recharts": "^3.3.0",
+    "remark-gfm": "^4.0.1",
+    "three": "^0.182.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
